<resources>
    <string name="app_name">Oye5</string>

    <string name="facebook_app_id">1155228124524547</string>    <!-- mine -->
    <!-- <string name="facebook_app_id">184283395325802</string>  -->       <!-- provided -->

    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Sign in with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Sign in with Facebook</string>

    <string name="btn_label_ok">OK</string>
    <string name="btn_label_cancel">Cancel</string>

    <string name="chats">Chats</string>
    <string name="chats_no_list">No chats yet</string>
    <string name="chats_sell_your_stuff">Sell your stuff</string>
    <string name="chats_interested">I\'m interested</string>
    <string name="chats_negotiable">Is it negotiable</string>
    <string name="chats_not_interested">Sorry I\'m not interested</string>
    <string name="chats_input_hint">Type your message here</string>

    <string name="signup">sign up</string>
    <string name="signup1">Sign up</string>
    <string name="signup_contact_us">Contact us and More</string>
    <string name="signup_enter_your_name">USERNAME</string>
    <string name="signin">Sign In</string>
    <string name="signin_with_facebook">sign in with facebook</string>
    <string name="signin_with_email">sign in with email</string>
    <string name="signin_with_your_email">Sign in with your email</string>
    <string name="signin_enter_your_email">ENTERYOUR@EMAIL.COM</string>
    <string name="signin_password">PASSWORD</string>
    <string name="signin_password_show">Show</string>
    <string name="signin_password_hidden">Hide</string>

    <string name="menu_title_buy">Buy</string>
    <string name="menu_title_categories">Categories</string>
    <string name="menu_title_sell">Sell</string>
    <string name="menu_title_chat">Chat</string>
    <string name="menu_title_profile">Profile</string>

    <string name="press_back_again">Press back button again to exit.</string>

    <!-- <item>SOLD</item> -->
    <string-array name="user_products_type_ary">
        <item>BUYING</item>
        <item>SELLING</item>
        <item>FAVORITES</item>
    </string-array>

    <string-array name="chats_tab_title_ary">
        <item>ALL</item>
        <item>SELLING</item>
        <item>BUYING</item>
        <item>BLOCKED USER</item>
    </string-array>

    <string name="delete">Delete</string>

    <string name="search">Search products…</string>
    <string name="search_in_location">Search in Location</string>

    <string name="make_an_offer">Make an offer</string>
    <string name="message">Message</string>

    <string name="similar_items">Similar Items</string>

    <string name="filters">Filters</string>
    <string name="reset">Reset</string>

    <string name="distance">Distance:</string>
    <string name="sort_by">Sort By:</string>
    <string name="newest_first">Newest First</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="price_high_to_low">Price high to low</string>

    <string name="price_filter">Price Filter:</string>
    <string name="min_price">Min.Price</string>
    <string name="max_price">Max.Price</string>

    <string name="category">Category: %1$s</string>
    <string name="categories1">Categories</string>
    <string name="categories">Categories:</string>
    <string name="cat_electronics">Electronics</string>
    <string name="cat_sports">Sports &amp; Leisure</string>
    <string name="cat_fashion">Fashion &amp; Accessories</string>
    <string name="cat_cars">Cars &amp; Motors</string>
    <string name="cat_home">Home &amp; Garden</string>
    <string name="cat_baby">Baby &amp; Child</string>
    <string name="cat_books">Books, Movies &amp; Music</string>
    <string name="cat_other">Other</string>

    <string name="added">Added: %1$s</string>
    <string name="new_listing">New Listing</string>
    <string name="add_photo_video">Add Photo/Video</string>
    <string name="item_info">Item Info</string>

    <string name="title">Title:</string>
    <string name="title_hint">Name your product</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="condition">Condition: %1$s</string>
    <string name="con_new">New</string>
    <string name="con_new_desc">Product is unused and has no stains or damages</string>
    <string name="con_like_new">Like New</string>
    <string name="con_like_new_desc">Product is used and has no stains or damages</string>
    <string name="con_good">Good</string>
    <string name="con_good_desc">Item has slight cosmetic damages but is functional</string>
    <string name="con_okay">Okay</string>
    <string name="con_okay_desc">Item has notice cosmetic damages but still works</string>
    <string name="con_non_functional">Non-Functional</string>
    <string name="con_non_functional_desc">Item is badly damages or may not work</string>
    <string name="warranty">Warranty:</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="additional_details">Additional Details</string>
    <string name="tags">Tags:</string>
    <string name="input_tag_name">Input Tag name here</string>
    <string name="brand">Brand:</string>
    <string name="social_media">Social Media</string>
    <string name="post_on_facebook">Post on Facebook</string>
    <string name="post_on_instagram">Post on Instagram</string>
    <string name="item_location">Item Location</string>
    <string name="save_as_draft">Save as a draft</string>
    <string name="publish">Publish</string>
    <string name="select_photo">Select Photo</string>
    <string name="use_photo">Use Photo</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>

    <string name="please_wait">Please wait…</string>
    <string name="server_connection_error">Server connection error!</string>

    <string name="valid_enter_email">Please input valid email!</string>
    <string name="valid_enter_username">Please input username!</string>
    <string name="valid_enter_password">Please input password!</string>

    <string name="gps_enable_title">Enable GPS</string>
    <string name="gps_enable_confirm">App requires your location. Would you like to enable GPS?</string>

    <string name="menu_profile_change_photo">Change Photo</string>
    <string name="menu_profile_logout">Logout</string>

    <string name="logout">Logout</string>
    <string name="logout_desc">Are you sure you want to log out?</string>

    <string name="photo_crop">Photo Crop</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_photo">Take a Photo</string>

    <string name="no_product_found">No products found.</string>

    <string-array name="category_ary">
        <item>ELECTRONICS</item>
        <item>CARS &amp; MOTORS</item>
        <item>SPORTS &amp; LEISURE</item>
        <item>HOME &amp; GARDEN</item>
        <item>BOOK, MOVIES &amp; MUSIC</item>
        <item>FASHION &amp; ACCESSORIES</item>
        <item>BABY &amp; CHILDREN</item>
        <item>OTHERS</item>
    </string-array>

    <string name="photo_change">Photo change</string>

    <string name="favorite_product">Favorite</string>
    <string name="unfavorite_product">UnFavorite</string>
</resources>
