<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_signup" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <TextView
        android:id="@+id/txtContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:drawablePadding="@dimen/dp_10"
        android:drawableRight="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15"
        android:text="@string/signup_contact_us"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/dp_150"
        android:src="@drawable/img_main_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_50"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30">

        <Button
            android:id="@+id/btnFacebookSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/bg_facebook_btn"
            android:text="@string/signin_with_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btnEmailSignin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_red_round_btn"
            android:text="@string/signin_with_email"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_white_stroke_btn"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEmailSigninPopup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signin_email_popup_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-240dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/btnClosePopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/bg_overlay_btn"
            android:padding="@dimen/dp_5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_with_your_email"
                android:textColor="@color/gray_color2"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:hint="@string/signin_enter_your_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edtPassword"
                android:singleLine="true"
                android:textColor="@color/gray_color2"
                android:textColorHint="@color/gray_color7"
                android:textSize="@dimen/sp_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:hint="@string/signin_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/gray_color2"
                    android:textColorHint="@color/gray_color7"
                    android:textSize="@dimen/sp_14" />

                <Button
                    android:id="@+id/btnShowPassword"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_25"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_grey_round_btn"
                    android:text="@string/signin_password_show"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@drawable/bg_blue_round_btn"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>