<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_overlay_btn">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_back_white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_photo"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/btnUsePhoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_overlay_blue_btn"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/use_photo"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="@dimen/dp_15">

        <ImageView
            android:id="@+id/imgSelectedPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter" />
    </RelativeLayout>

    <GridView
        android:id="@+id/grdPhotos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:numColumns="@integer/photo_grid_col_count"
        android:padding="@dimen/dp_5">

    </GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_5">

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/photo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>